browser/base/content/pageinfo/pageInfo.css
#viewGroup > radio {
  -moz-binding: url("chrome://browser/content/pageinfo/pageInfo.xml#viewbutton");
}

richlistitem[feed] {
  -moz-binding: url("chrome://browser/content/pageinfo/feeds.xml#feed");
}

richlistitem[feed]:not([selected="true"]) .feed-subscribe {
  display: none;
}

groupbox[closed="true"] > .groupbox-body { 
  visibility: collapse;
}


#thepreviewimage {
  min-width: 1px;
}

