Bug 437864 - In <pageInfo.xul>, "Warning: XUL box for hbox element contained an inline img child, forcing all its children to be wrapped in a block." r=dao
UltraBlame original commit: 71125631398b06bc666f28b182920f12d0f9bafd

--- a/browser/base/content/pageinfo/pageInfo.css
+++ b/browser/base/content/pageinfo/pageInfo.css
@@ -19,7 +19,8 @@ groupbox[closed="true"] > .groupbox-body {
   visibility: collapse;
 }
 
-
 #thepreviewimage {
+  display: block;
+
   min-width: 1px;
 }
